--- a/groceries/src/app/tab1/tab1.page.html
+++ b/groceries/src/app/tab1/tab1.page.html
@@ -1,8 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      {{title}}
-    </ion-title>
+    <ion-title> {{title}} </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,25 +10,38 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
+<!-- Instead of using name, I should have been using slot before. I changed item to n to simplify the file since I kept messing up item. n helped me to differeniate more-->
+  <h3 class="no-item" text-center *ngIf="loadItems().length === 0">No items on your list...</h3> 
   <ion-list>
-
-    <ion-item-sliding  *ngFor="let item of items; let i = index">
+    <ion-item-sliding *ngFor="let n of loadItems(); let i = index">
       <ion-item>
-        <h2>{{item.name}}</h2>
-        <p>{{item.quantity}}</p>
+        <ion-label>
+          <h2>{{n.itemName}}</h2>
+          <p>{{n.qty}}</p>
+        </ion-label>
       </ion-item>
-      <ion-item-options>
-        <button (click)="removeItem(item, i)" ion-button color="secondary" icon-start>
-          <ion-icon name="trash"></ion-icon>
-          Done
-        </button>
+      <ion-item-options side="end">
+          <ion-item-option (click)="editItem(n, i)" ion color="primary">
+              <ion-icon slot="icon-only" name="create"></ion-icon>
+             Edit
+            </ion-item-option>
+
+            <ion-item-option (click)="shareItem(n, i)" ion color="light">
+              <ion-icon slot="icon-only" name="share"></ion-icon>
+              Share
+          </ion-item-option>
+
+        <ion-item-option (click)="removeItem(n, i)" ion color="danger">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+         Remove
+        </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="addItem()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-
 </ion-content>
